--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -84,7 +84,7 @@ button:focus-visible {
     input[type="email"],
     input[type="password"],
     input[type="search"],
-    input[type="tel"],
+    .input[type="tel"],
     input[type="url"], textarea {
         @apply block w-full rounded-md border-0 p-2 text-slate-900 shadow-sm ring-1 ring-inset ring-slate-300 placeholder:text-slate-500 focus:ring-2 focus:ring-inset focus:ring-blue-500 sm:text-sm bg-white;
     }
@@ -101,7 +101,7 @@ button:focus-visible {
         @apply max-w-screen-lg mx-auto;
     }
     .primary-btn {
-        @apply flex w-full justify-center rounded-md bg-blue-500 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-blue-600 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 disabled:bg-slate-400 disabled:cursor-wait;
+        @apply flex w-full cursor-pointer justify-center rounded-md bg-blue-500 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-blue-600 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 disabled:bg-slate-400 disabled:cursor-wait;
     }
     .text-link {
         @apply font-semibold text-blue-500 hover:text-blue-600;
@@ -134,7 +134,10 @@ button:focus-visible {
         @apply w-8 h-8 rounded-full overflow-hidden object-center object-cover;
     }
     .invalid-feedback{
-      @apply mt-2 text-red-500 text-xs/tight
+      @apply mt-2 text-red-500 text-xs/tight;
+    }
+    .cor-azul-1{
+      @apply bg-blue-50;
     }
 }
 
