--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -126,7 +126,7 @@ button:focus-visible {
         @apply text-xs text-red-500 mt-1;
     }
     table {
-        @apply w-full text-sm text-left rounded-md shadow-lg overflow-hidden mb-6 table-auto bg-white;
+        @apply w-full text-sm text-left rounded-md shadow-lg overflow-hidden  table-auto bg-white;
     }
     thead {
         @apply text-xs uppercase font-medium border-b border-slate-100 text-slate-600;
