--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -30,7 +30,7 @@
     }
 
     main {
-        @apply max-w-screen-xl mx-auto pb-10;
+        @apply max-w-screen-xl md:mx-auto mr-6 ml-2 pb-10;
     }
     .primary-btn {
         @apply flex w-full cursor-pointer justify-center rounded-md bg-blue-500 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-blue-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 disabled:bg-slate-400 disabled:cursor-wait;
