--- a/frontend/src/Components/Candidatos/ProcessoCard/ProcessoCard.module.css
+++ b/frontend/src/Components/Candidatos/ProcessoCard/ProcessoCard.module.css
@@ -1,13 +1,15 @@
+@reference "@/index.css"; 
+
 @font-face {
     font-family: 'Sora';
-    src: url('../../assets/Fonts/Sora/Sora-VariableFont_wght.ttf') format('truetype');
+    src: url('@/assets/Fonts/Sora/Sora-VariableFont_wght.ttf') format('truetype');
 }
 
 h3.cardName{
-    color: #000;
-    font-family: 'Sora', sans-serif;
-    font-size: 22px;
+    @apply text-black text-[24px];
+    font-family: "Sora", sans-serif;
     font-style: normal;
+    font-weight: 600;
     line-height: 19px;
 }
 
