📦build: instalação do react-icons de todos os tipos, do line-clamp e do typescript no projeto
O line-clamp é usado pra limitar a quantidade de caracteres visíveis no front sem precisar usar função pra contar a quantidade e depois concatenar com "...".

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,76 +1,3 @@
-/*@import "tailwindcss";
-@plugin "flowbite-react/plugin/tailwindcss";
-@source "../.flowbite-react/class-list.json";
-
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  cursor: pointer;
-  transition: border-color 0.25s;
-  color: white;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-
-} 
-
-*/
-/* Please note this document will be updated as time goes by. Thank you */
-/* Please note this document will be updated as time goes by. Thank you */
-
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 @import "tailwindcss";
@@ -88,6 +15,11 @@ button:focus-visible {
 */
 
 @custom-variant dark (&:is(.dark *));
+
+@font-face {
+    font-family: 'Sora';
+    src: url('@/assets/Fonts/Sora/Sora-VariableFont_wght.ttf') format('truetype');
+}
 
 @layer base {
     body {
@@ -111,7 +43,7 @@ button:focus-visible {
         @apply mb-[60px] sm:mb-0;
     }
     main {
-        @apply mx-4 sm:mx-10 pb-10;
+        @apply mt-24 mx-8 sm:mx-10 pb-10;
     }
     .primary-btn {
         @apply flex w-full cursor-pointer justify-center rounded-md bg-blue-500 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-blue-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 disabled:bg-slate-400 disabled:cursor-wait;
