--- a/frontend/src/Pages/Candidato/Auth/Registro/Registro.css
+++ b/frontend/src/Pages/Candidato/Auth/Registro/Registro.css
@@ -24,3 +24,11 @@ form#register input{
 form#register label{
     @apply block text-sm/6 font-medium text-gray-900;
 }
+
+a#already_have_account{
+    @apply hover:cursor-pointer text-sm mx-auto w-fit font-semibold text-[#333A56] hover:text-indigo-500;
+}
+
+button#cadastroBtn{
+    @apply flex w-full justify-center rounded-md bg-[#333A56] px-3 py-1.5 text-sm/6 font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 hover:cursor-pointer;
+}
