--- a/frontend/src/Pages/Candidato/Auth/Registro/Registro.css
+++ b/frontend/src/Pages/Candidato/Auth/Registro/Registro.css
@@ -5,7 +5,7 @@ div#container-form{
 }
 
 #container-form #alert-form{
-    @apply p-2 bg-[#333A56] items-center text-indigo-100 leading-none lg:rounded-full flex lg:inline-flex mt-3 mb-5;
+    @apply p-2 bg-[#333A56] items-center text-indigo-100 leading-none rounded-full flex lg:inline-flex mt-3 mb-5;
 }
 
 form#register{
