--- a/frontend/src/Pages/Candidato/Auth/Registro/Registro.css
+++ b/frontend/src/Pages/Candidato/Auth/Registro/Registro.css
@@ -1,7 +1,7 @@
 @reference "@/index.css";
 
 div#container-form{
-    @apply mt-4 sm:mx-auto sm:w-full sm:max-w-sm bg-gray-50 px-6 py-2 shadow-xl border-2 border-b-gray-100 rounded-[13px];
+    @apply mt-4 sm:mx-auto sm:w-full sm:max-w-sm bg-gray-50 px-6 py-2 rounded-2xl shadow-[-1px_0px_2px_0px_rgba(0,0,0,0.25),1px_1px_2px_0px_rgba(0,0,0,0.25)];
 }
 
 #container-form #alert-form{
