--- a/frontend/src/Pages/Candidato/Auth/Registro/Registro.css
+++ b/frontend/src/Pages/Candidato/Auth/Registro/Registro.css
@@ -5,7 +5,7 @@ div#container-form{
 }
 
 #container-form #alert-form{
-    @apply p-2 bg-[#333A56] items-center text-indigo-100 leading-none rounded-full flex lg:inline-flex mt-3 mb-5;
+    @apply p-2 bg-[#0751ac] items-center text-indigo-100 leading-none rounded-full flex lg:inline-flex mt-3 mb-5;
 }
 
 form#register{
@@ -26,9 +26,11 @@ form#register label{
 }
 
 a#already_have_account{
-    @apply hover:cursor-pointer text-sm mx-auto w-fit font-semibold text-[#333A56] hover:text-indigo-500;
+    @apply hover:cursor-pointer text-sm mx-auto w-fit font-semibold text-[#095ec5] hover:text-indigo-500;
 }
 
 button#cadastroBtn{
-    @apply flex w-full justify-center rounded-md bg-[#333A56] px-3 py-1.5 text-sm/6 font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 hover:cursor-pointer;
+    @apply flex w-full justify-center rounded-md px-3 py-1.5 text-sm/6 font-semibold text-white shadow-xs focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 hover:cursor-pointer;
+    @apply bg-[#095ec5];
+    @apply hover:bg-[#0751ac];
 }
