--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -25,6 +25,13 @@
     body {
         font-family: "Poppins", sans-serif;
     }
+    body {
+        transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+    }
+
+    * {
+        transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out, border-color 0.3s ease-in-out;
+    }
 }
 
 @layer components {
