--- a/frontend/src/Pages/Candidato/MeusProcessos/MeusProcessos.css
+++ b/frontend/src/Pages/Candidato/MeusProcessos/MeusProcessos.css
@@ -1,10 +1,10 @@
 @reference "@/index.css";
 
-section#MeusProcessos{
+/* section#MeusProcessos{
     @apply mx-auto min-h-[75vh];
     @apply px-2 md:px-6 mt-10 py-12; 
     @apply bg-white rounded-2xl shadow-[-1px_0px_2px_0px_rgba(0,0,0,0.25),1px_1px_2px_0px_rgba(0,0,0,0.25)];
-}
+} */
 
 #MeusProcessos form{
     @apply max-w-5xl mx-auto;
