--- a/frontend/src/Pages/Candidato/MeusProcessos/MeusProcessos.css
+++ b/frontend/src/Pages/Candidato/MeusProcessos/MeusProcessos.css
@@ -1,17 +1,11 @@
 @reference "@/index.css";
 
-/* section#MeusProcessos{
-    @apply mx-auto min-h-[75vh];
-    @apply px-2 md:px-6 mt-10 py-12; 
-    @apply bg-white rounded-2xl shadow-[-1px_0px_2px_0px_rgba(0,0,0,0.25),1px_1px_2px_0px_rgba(0,0,0,0.25)];
-} */
-
 #MeusProcessos form{
     @apply max-w-5xl mx-auto;
 }
 
 #MeusProcessos header{
-    @apply flex flex-col md:flex-row items-center md:justify-between mb-12 mx-2 space-y-4 md:space-y-0;
+    @apply flex flex-col md:flex-row items-center md:justify-between mb-4 mt-8 mx-2 space-y-4 md:space-y-0;
 }
 
 #MeusProcessos header h1{
