--- a/frontend/src/Components/Global/NavLinkTables/NavLinkTables.css
+++ b/frontend/src/Components/Global/NavLinkTables/NavLinkTables.css
@@ -11,6 +11,7 @@
 #paginationContainer .pageButton {
     @apply px-4 py-2 mx-0 border border-gray-300 bg-[#F2F5F7] text-gray-700 hover:bg-gray-100 hover:cursor-pointer disabled:opacity-50 disabled:cursor-not-allowed;
     @apply dark:border-gray-600 dark:bg-gray-800 dark:text-gray-200 dark:hover:bg-gray-700;
+    @apply font-bold;
 }
 
 #paginationContainer .pageNumbersContainer {
