🚧 in progress: Adaptação de registro das cores globais do projeto para a index.css, para centralizar a declaração

--- a/frontend/src/Components/Admin/Header/Header.css
+++ b/frontend/src/Components/Admin/Header/Header.css
@@ -12,7 +12,7 @@ header#admin {
 
     @apply shadow-sm;
     
-    @apply dark:bg-slate-900 bg-[#29166F] transition-all duration-700 ease-in-out;
+    @apply dark:bg-slate-900 bg-[var(--header-admin-primary)] transition-all duration-700 ease-in-out;
     
     @apply md:rounded-xl;
 }
