--- a/frontend/src/Pages/Admin/Home/GerenciarPerfis/ActionPages/GerenciarPerfisPermissoes/GerenciarPerfisPermissoes.css
+++ b/frontend/src/Pages/Admin/Home/GerenciarPerfis/ActionPages/GerenciarPerfisPermissoes/GerenciarPerfisPermissoes.css
@@ -1,17 +1,17 @@
 @reference "@/index.css";
 
-section#gerenciar_perfis_global{
+section#gerenciar_perfis_permissoes{
     @apply mt-0;
 }
-section#gerenciar_perfis_global header h1{
+section#gerenciar_perfis_permissoes header h1{
     @apply text-white text-[22px] not-italic font-bold leading-[normal] mx-0;
     font-family: Sora;
 }
-section#gerenciar_perfis_global header{
+section#gerenciar_perfis_permissoes header{
     @apply absolute top-0 left-0 w-full px-6 py-4 rounded-t-xl bg-[var(--header-admin-primary)] border-2;
 }
 
-section#gerenciar_perfis_global div#content{
+section#gerenciar_perfis_permissoes div#content{
     /* @apply mt-8; */
     @apply mt-15;
 }
