--- a/frontend/src/Pages/Admin/Home/GerenciarPerfis/ActionPages/GerenciarPerfisPermissoes/GerenciarPerfisPermissoes.css
+++ b/frontend/src/Pages/Admin/Home/GerenciarPerfis/ActionPages/GerenciarPerfisPermissoes/GerenciarPerfisPermissoes.css
@@ -12,7 +12,15 @@ section#gerenciar_perfis_permissoes header{
 }
 
 section#gerenciar_perfis_permissoes div#content{
-    /* @apply mt-8; */
-    @apply mt-15;
+    @apply mt-10 mb-2 lg:px-4 mx-4 md:mx-0;
 }
 
+section#gerenciar_perfis_permissoes div#content div h2{
+    @apply text-black text-[24px] font-normal;
+    font-family: Sora;
+}
+
+/* section#gerenciar_perfis_permissoes div#content div#informacoes_gerais div input, */
+section#gerenciar_perfis_permissoes div#content div#informacoes_gerais div > div{
+    @apply col-span-12 sm:col-span-6 md:col-span-4 lg:col-span-3 sm:max-w-[296px];
+}
