--- a/frontend/src/Components/Candidatos/ProcessoPessoalCard/ProcessoPessoalCard.css
+++ b/frontend/src/Components/Candidatos/ProcessoPessoalCard/ProcessoPessoalCard.css
@@ -6,7 +6,7 @@ li.ProcessoPessoalCard{
     drop-shadow(0px 0px 0px rgba(0, 0, 0, 0.08));
 }
 li.ProcessoPessoalCard article{
-  @apply flex flex-row border p-4 rounded-lg shadow-md bg-gray-50 space-x-3 dark:bg-gray-800 dark:border-gray-700;
+  @apply flex flex-row border p-4 rounded-md shadow-md bg-gray-50 space-x-3 dark:bg-gray-800 dark:border-gray-700;
 }
 
 li.ProcessoPessoalCard article > div{
