--- a/frontend/src/Pages/Admin/Home/Editais/Editais.css
+++ b/frontend/src/Pages/Admin/Home/Editais/Editais.css
@@ -40,7 +40,7 @@
 
 /* Estilos para o input de busca */
 #HomeAdmin .search-input {
-    @apply block w-full p-2 mr-20 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500;
+    @apply block w-full p-2 mr-20 ps-10 text-sm text-gray-900 border border-gray-300 rounded-md bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500;
 }
 
 /* Estilos para o contêiner do botão de filtro e dropdown */
@@ -50,7 +50,7 @@
 
 /* Estilos para o botão de filtro */
 #HomeAdmin .filter-button {
-    @apply flex items-center gap-2 px-4 py-2 text-sm font-medium text-gray-700 bg-white border border-gray-300 rounded-lg shadow-sm hover:bg-gray-100 dark:bg-gray-700 dark:text-gray-200 dark:border-gray-600 dark:hover:bg-gray-600 focus:outline-none focus:ring-2 focus:ring-blue-500;
+    @apply flex items-center gap-2 px-4 py-2 text-sm font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover:bg-gray-100 dark:bg-gray-700 dark:text-gray-200 dark:border-gray-600 dark:hover:bg-gray-600 focus:outline-none focus:ring-2 focus:ring-blue-500;
 }
 
 #HomeAdmin .filter-button .filter-icon {
