--- a/frontend/src/Components/Global/Tables/TestTable/TestTable.css
+++ b/frontend/src/Components/Global/Tables/TestTable/TestTable.css
@@ -15,15 +15,15 @@
 }
 
 .table-tools .buscar-elemento{
-    @apply pl-10 pr-4 py-2 w-full md:w-80 border border-slate-300 dark:border-slate-600 rounded-lg bg-white dark:bg-slate-800 text-slate-800 dark:text-slate-200 focus:outline-none focus:ring-2 focus:ring-blue-500;
+    @apply pl-10 pr-4 py-2 w-full md:w-80 border border-slate-300 dark:border-slate-600 rounded-md bg-white dark:bg-slate-800 text-slate-800 dark:text-slate-200 focus:outline-none focus:ring-2 focus:ring-blue-500;
 }
 
 /**  --------- Modal de Filtros e BTN --------- **/
     button.table-filters{
-        @apply cursor-pointer flex items-center gap-2 px-4 py-2 border border-slate-300 dark:border-slate-600 rounded-lg text-slate-700 dark:text-slate-200 hover:bg-slate-100 dark:hover:bg-slate-700;
+        @apply cursor-pointer flex items-center gap-2 px-4 py-2 border border-slate-300 dark:border-slate-600 rounded-md text-slate-700 dark:text-slate-200 hover:bg-slate-100 dark:hover:bg-slate-700;
     }
     .table-tools .modal-filtros{
-        @apply absolute z-10 top-full right-0 mt-2 p-4 w-56 bg-white dark:bg-slate-800 rounded-lg shadow-xl border dark:border-slate-700;
+        @apply absolute z-10 top-full right-0 mt-2 p-4 w-56 bg-white dark:bg-slate-800 rounded-md shadow-xl border dark:border-slate-700;
     }
 
     .table-tools .modal-filtros{
@@ -36,7 +36,7 @@
 /** ----------------------------------------- **/
 
 button.export{
-    @apply px-4 hover:cursor-pointer py-2 border border-slate-300 dark:border-slate-600 rounded-lg text-slate-700 dark:text-slate-200 hover:bg-slate-100 dark:hover:bg-slate-700 disabled:opacity-50 disabled:cursor-wait;
+    @apply px-4 hover:cursor-pointer py-2 border border-slate-300 dark:border-slate-600 rounded-md text-slate-700 dark:text-slate-200 hover:bg-slate-100 dark:hover:bg-slate-700 disabled:opacity-50 disabled:cursor-wait;
 }
 
 table.component{
