--- a/frontend/src/Pages/Admin/Home/GerenciarUsuarios/GerenciarUsuarios.css
+++ b/frontend/src/Pages/Admin/Home/GerenciarUsuarios/GerenciarUsuarios.css
@@ -8,7 +8,7 @@ section#gerenciar_usuarios_global header h1{
     font-family: Sora;
 }
 section#gerenciar_usuarios_global header{
-    @apply absolute top-0 left-0 w-full px-6 py-4 rounded-t-xl bg-[var(--header-admin-primary)] border-2;
+    @apply absolute top-0 left-0 w-full px-6 py-4 rounded-t-xl bg-[var(--header-admin-primary)];
 }
 
 section#gerenciar_usuarios_global div#content{
