--- a/frontend/src/Pages/Admin/Home/NovoEdital/NovoEdital.css
+++ b/frontend/src/Pages/Admin/Home/NovoEdital/NovoEdital.css
@@ -8,7 +8,7 @@ section#novoEdital header h1{
     font-family: Sora;
 }
 section#novoEdital header{
-    @apply absolute top-0 left-0 w-full px-6 py-4 rounded-t-xl bg-[var(--header-admin-primary)] border-2;
+    @apply absolute top-0 left-0 w-full px-6 py-4 rounded-t-xl bg-[var(--header-admin-primary)];
 }
 
 section#novoEdital form#content{
