🐛fix: ajustando mais estilos dos modais e icons

--- a/frontend/src/Pages/Admin/Home/NovoEdital/NovoEdital.css
+++ b/frontend/src/Pages/Admin/Home/NovoEdital/NovoEdital.css
@@ -22,6 +22,6 @@ section#novoEdital button.prosseguir_and_finalizar{
     @apply px-6 py-2.5 text-sm font-semibold text-white bg-blue-600 rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500;
 }
 section#novoEdital button.voltar_and_cancelar{
-    @apply px-6 py-2.5 text-sm font-semibold text-gray-700 bg-white border border-gray-300 rounded-md hover:bg-gray-50;    
+    @apply px-6 py-2.5 text-sm font-semibold text-gray-700 bg-white border border-gray-300 rounded-md hover:bg-gray-50 cursor-pointer;    
 }
 
