--- a/frontend/src/Components/Admin/InsideEdital/Modais/Modais.css
+++ b/frontend/src/Components/Admin/InsideEdital/Modais/Modais.css
@@ -32,10 +32,10 @@
     @apply mt-6 flex justify-end items-center space-x-4;
 }
 
-#save-button {
+#modal-purple-button {
     @apply cursor-pointer px-8 py-2.5 text-sm font-semibold text-white bg-[var(--admin-button)] rounded-md hover:bg-[var(--admin-button-hover)];
 }
 
-#cancel-button {
+#modal-white-button {
     @apply px-6 py-2.5 text-sm font-semibold text-gray-700 bg-white border border-gray-300 rounded-md hover:bg-gray-50 cursor-pointer;
 }
