--- a/frontend/src/Components/Admin/Header/Header.css
+++ b/frontend/src/Components/Admin/Header/Header.css
@@ -7,7 +7,7 @@ header#admin {
 }
 #admin nav {
     @apply container relative flex mx-auto rounded-2xl;
-    @apply px-6 py-2 flex flex-nowrap justify-between;
+    @apply flex flex-nowrap justify-between;
     @apply min-w-[310px] max-w-screen-xl mt-2.5;
 
     @apply shadow-sm;
@@ -43,12 +43,12 @@ header#admin {
 
 #admin .link-page:not(.active-link){
     @apply px-0 text-white font-semibold relative transition-colors duration-200 ease-in-out;
-    @apply whitespace-nowrap md:text-sm;
+    @apply whitespace-nowrap lg:text-[16px] sm:text-sm;
 
     /* HOVER - Efeito de underline que surge da esquerda para a direita */
     &::after {
         content: '';
-        @apply absolute bottom-0 left-0 h-[2px];
+        @apply absolute bottom-[-2px] left-0 h-[2px];
         @apply bg-white;
         @apply w-0;
         @apply transition-all duration-300 ease-in-out;
@@ -72,12 +72,12 @@ header#admin {
 }
 #admin .active-link{
     @apply px-0 text-white font-semibold relative transition-colors duration-200 ease-in-out;
-    @apply whitespace-nowrap md:text-sm;
+    @apply whitespace-nowrap lg:text-[16px] sm:text-sm;
 
     /* HOVER - Efeito de underline que surge da esquerda para a direita */
     &::after {
         content: '';
-        @apply absolute bottom-[-3px] left-0 h-[3px];
+        @apply absolute bottom-[-2px] left-0 h-[2px];
         @apply bg-blue-700;
         @apply w-0;
         @apply transition-all duration-300 ease-in-out;
