--- a/frontend/src/Components/Admin/Header/Header.css
+++ b/frontend/src/Components/Admin/Header/Header.css
@@ -41,72 +41,124 @@ header#admin {
     height: 50px;
 }
 
-#admin .link-page:not(.active-link){
-    @apply px-0 text-white font-semibold relative transition-colors duration-200 ease-in-out;
-    @apply whitespace-nowrap lg:text-[16px] sm:text-sm;
+@media (min-width: 768px) {
+    #admin .link-page:not(.active-link){
+        @apply px-0 text-white font-semibold relative transition-colors duration-200 ease-in-out;
+        @apply whitespace-nowrap lg:text-[16px] sm:text-sm;
 
-    /* HOVER - Efeito de underline que surge da esquerda para a direita */
-    &::after {
-        content: '';
-        @apply absolute bottom-[-2px] left-0 h-[2px];
-        @apply bg-white;
-        @apply w-0;
-        @apply transition-all duration-300 ease-in-out;
+        /* HOVER - Efeito de underline que surge da esquerda para a direita */
+        &::after {
+            content: '';
+            @apply absolute bottom-[-2px] left-0 h-[2px];
+            @apply bg-white;
+            @apply w-0;
+            @apply transition-all duration-300 ease-in-out;
+        }
+
+        &:hover::after {
+            @apply w-full;
+        }
+
+        &.active::after {
+            @apply w-full;
+            @apply bg-[#005ABF];
+        }
+
+        /* Opcional: Se você quiser um foco suave ao navegar com teclado */
+        &:focus-visible {
+            outline: 2px solid theme('colors.white'); /* Adiciona um outline branco para acessibilidade */
+            outline-offset: 2px;
+            @apply rounded-sm;
+        }
     }
+    #admin .active-link{
+        @apply px-0 text-white font-semibold relative transition-colors duration-200 ease-in-out;
+        @apply whitespace-nowrap lg:text-[16px] sm:text-sm;
 
-    &:hover::after {
-        @apply w-full;
+        /* HOVER - Efeito de underline que surge da esquerda para a direita */
+        &::after {
+            content: '';
+            @apply absolute bottom-[-2px] left-0 h-[2px];
+            @apply bg-blue-700;
+            @apply w-0;
+            @apply transition-all duration-300 ease-in-out;
+        }
+
+        &:hover::after {
+            @apply w-full;
+        }
+
+        &.active::after {
+            @apply w-full;
+            @apply bg-[#005ABF];
+        }
+
+        /* Opcional: Se você quiser um foco suave ao navegar com teclado */
+        &:focus-visible {
+            outline: 2px solid theme('colors.white'); /* Adiciona um outline branco para acessibilidade */
+            outline-offset: 2px;
+            @apply rounded-sm;
+        }
     }
-
-    &.active::after {
-        @apply w-full;
-        @apply bg-[#005ABF];
-    }
-
-    /* Opcional: Se você quiser um foco suave ao navegar com teclado */
-    &:focus-visible {
-        outline: 2px solid theme('colors.white'); /* Adiciona um outline branco para acessibilidade */
-        outline-offset: 2px;
-        @apply rounded-sm;
-    }
-}
-#admin .active-link{
-    @apply px-0 text-white font-semibold relative transition-colors duration-200 ease-in-out;
-    @apply whitespace-nowrap lg:text-[16px] sm:text-sm;
-
-    /* HOVER - Efeito de underline que surge da esquerda para a direita */
-    &::after {
-        content: '';
-        @apply absolute bottom-[-2px] left-0 h-[2px];
-        @apply bg-blue-700;
-        @apply w-0;
-        @apply transition-all duration-300 ease-in-out;
-    }
-
-    &:hover::after {
-        @apply w-full;
-    }
-
-    &.active::after {
-        @apply w-full;
-        @apply bg-[#005ABF];
-    }
-
-    /* Opcional: Se você quiser um foco suave ao navegar com teclado */
-    &:focus-visible {
-        outline: 2px solid theme('colors.white'); /* Adiciona um outline branco para acessibilidade */
-        outline-offset: 2px;
-        @apply rounded-sm;
-    }
-}
-
- #admin .navbar-collapse.md\:hidden ul {
-    @apply flex flex-col; /* Garante que no mobile eles fiquem em coluna */
 }
 
 
 /* ------------------------------------------- MENU MOBILE ------------------------------------------- */
 
+/* Tamanho máximo para aplicar os estilos */
+@media (max-width: 768px) {
 
+    /* Link não ativo */
+    #admin .link-page:not(.active-link) {
+        @apply bg-[var(--header-admin-responsive-nav-item)];
+        @apply my-1 w-full py-2 pl-5 text-white font-semibold rounded-md;
+        @apply whitespace-nowrap lg:text-[16px] sm:text-sm;
+
+        &:hover {
+            @apply bg-[var(--header-admin-responsive-hover-nav-item)];
+            @apply shadow-lg -translate-y-px;
+        }
+
+        /* Ao clicar, o botão "afunda" */
+        &:active {
+            @apply bg-[var(--header-admin-responsive-active-nav-item)];
+            @apply shadow-md translate-y-0;
+        }
+
+        /* Foco para acessibilidade (navegação com teclado) */
+        &:focus-visible {
+            @apply outline-none ring-2 ring-offset-2 ring-blue-400;
+        }
+    }
+
+    /* Link ativo */
+    #admin .active-link {
+        @apply bg-[var(--header-admin-responsive-active-nav-item)];
+        @apply w-full py-2 pl-5 text-white font-semibold rounded-md shadow-inner;
+        @apply whitespace-nowrap lg:text-[16px] sm:text-sm;
+        @apply cursor-default; /* Opcional: muda o cursor, já que o link está ativo */
+
+        &:hover {
+            @apply bg-[var(--header-admin-responsive-hover-nav-item)];
+            @apply shadow-lg -translate-y-px;
+        }
+
+        /* Ao clicar, o botão "afunda" */
+        &:active {
+            @apply bg-[var(--header-admin-responsive-active-nav-item)];
+            @apply shadow-md translate-y-0;
+        }
+
+        /* Foco para acessibilidade (navegação com teclado) */
+        &:focus-visible {
+            @apply outline-none ring-2 ring-offset-2 ring-blue-400;
+        }
+    }
+
+    #navbar-toggle {
+        @apply text-white hover:bg-purple-900;
+    }
+
+}
 
 /* ------------------------------------------- END MENU MOBILE ------------------------------------------- */
