--- a/frontend/src/Components/Admin/InsideEdital/Modais/Modais.css
+++ b/frontend/src/Components/Admin/InsideEdital/Modais/Modais.css
@@ -39,3 +39,16 @@
 #modal-white-button {
     @apply px-6 py-2.5 text-sm font-semibold text-gray-700 bg-white border border-gray-300 rounded-md hover:bg-gray-50 cursor-pointer;
 }
+
+/* Tabs */
+#tabs-container {
+    @apply border-b border-gray-200 mb-4;
+}
+
+#tabs-navs {
+    @apply -mb-px flex space-x-8;
+}
+
+#tabs-nav-button {
+    @apply whitespace-nowrap py-2 px-1 border-b-2 font-medium text-sm;
+}
