--- a/frontend/src/Components/Global/Stepper/Stepper.css
+++ b/frontend/src/Components/Global/Stepper/Stepper.css
@@ -5,7 +5,7 @@
 /* ------------------------------------- TIMELINE STYLES ------------------------------------- */
 
 .timeline-nav {
-    @apply flex items-center justify-center mb-10 mt-15 max-w-3xl mx-5 lg:mx-auto; /* Garantir que é um flex container centralizado */
+    @apply flex items-center justify-start mb-10 mt-15 max-w-3xl mx-5 lg:mx-auto; /* Garantir que é um flex container centralizado */
 }
 
 .step-item {
@@ -67,7 +67,7 @@
 
 /* Conectores da timeline */
 .timeline-connector {
-    @apply flex-grow h-0.5 relative mx-[-10px] mb-8;
+    @apply flex-grow h-0.5 relative mx-[-10px] mb-8 min-w-5;
     z-index: 0;
 }
 
